--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".StatusActivity"
             android:icon="@mipmap/ic_launcher"
@@ -20,12 +19,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".SettingsActivity"
             android:label="@string/action_settings" >
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:label="Yamba-Gr2" >
@@ -36,6 +33,10 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".RefreshService"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
